--- a/index.html
+++ b/index.html
@@ -18,16 +18,42 @@
         </div>
         <div class="hero">
             <div class="hero-left">
-            <h1>This website is awesome</h1>
-            <p>This website has some subtext that goes here under the main title.
+                <h1>This website is awesome</h1>
+                <p>This website has some subtext that goes here under the main title.
                 It's a smaller font and the color is lower contrast.
-            </p>
-            <button>Sign up</button>
+                </p>
+                <button>Sign up</button>
             </div>
-            
-                <img src="img/dunas.jpg" id="dunas">
-            
+                <img src="img/dunas.jpg" alt="Dunas de corralejo" id="dunas">
         </div>
+    </div>
+    <div class="container-2">
+        <h1>Some random information.</h1>
+        <div class="gallery">
+            <div>
+                <img src="img/queso_majorero.jpg" alt="Queso Majorero">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div>
+                <img src="img/gofio.jpg" alt="Gofio">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div>
+                <img src="img/papas_arrugadas.jpg" alt="Papas Arrugadas">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div>
+                <img src="img/carne_cabra.jpg" alt="Carne de Cabra">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+        </div>
+    </div>
+    <div class="container-3">
+        <p>This is an inspiring quote, or a testimonial from a costumer.
+            Maybe it's just filling up space, or maybe people will actually read it.
+            Who knows? All I know is that it looks nice.
+        </p>
+        <p>-Thor, God of Thunder</p>
     </div>
 </body>
 </html>
