Add Quote section to index.html and style.css

--- a/index.html
+++ b/index.html
@@ -49,11 +49,14 @@
         </div>
     </div>
     <div class="container-3">
-        <p>This is an inspiring quote, or a testimonial from a costumer.
+        <p id="quote">This is an inspiring quote, or a testimonial from a costumer.
             Maybe it's just filling up space, or maybe people will actually read it.
             Who knows? All I know is that it looks nice.
         </p>
-        <p>-Thor, God of Thunder</p>
+        <p id="author">-Thor, God of Thunder</p>
+    </div>
+    <div class="container-4">
+
     </div>
 </body>
 </html>
