Add Call to action! section to index.html and style.css

--- a/index.html
+++ b/index.html
@@ -56,7 +56,11 @@
         <p id="author">-Thor, God of Thunder</p>
     </div>
     <div class="container-4">
-
+        <div class="action">
+            <h1>Call to action! It's time!</h1>
+            <p>Sign up for our product by clicking that button right over there!</p>
+        </div>
+        <button>Sign up</button>
     </div>
 </body>
 </html>
