Add footer section to index.html and style.css

--- a/index.html
+++ b/index.html
@@ -62,5 +62,9 @@
         </div>
         <button>Sign up</button>
     </div>
+    <div class="footer">
+        <p>Made with &#129505; by <strong>Andromu</strong></p>
+        <a href="https://www.google.com/imghp?hl=es&authuser=0&ogbl" id="credits">Images from Google Images &#169;</a>
+    </div>
 </body>
 </html>
