Update the content of index.html

--- a/index.html
+++ b/index.html
@@ -4,47 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Landing Page</title>
+    <title>Fuerteventura: Food and beach.</title>
 </head>
 <body>
     <div class="container-1">
         <div class="header">
-            <p>Header Logo</p>
+            <p>Fuerteventura: Food and beach.</p>
             <ul>
-                <li><a href="#">header link one</a></li>
-                <li><a href="#">header link two</a></li>
-                <li><a href="#">header link three</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Food</a></li>
+                <li><a href="#">FAQ</a></li>
             </ul>
         </div>
         <div class="hero">
             <div class="hero-left">
-                <h1>This website is awesome</h1>
-                <p>This website has some subtext that goes here under the main title.
-                It's a smaller font and the color is lower contrast.
+                <h1>What is Fuerteventura?</h1>
+                <p>Fuerteventura is an island belonging to the Canary archipelago, in Spain.
+                    It stands out for its whitish sand beaches, its arid landscapes and its great Majorera cuisine.
                 </p>
-                <button>Sign up</button>
+                <button>Explore</button>
             </div>
-                <img src="img/dunas.jpg" alt="Dunas de corralejo" id="dunas">
+                <img src="img/sotavento.jpg" alt="Sotavento Beach" id="dunas">
         </div>
     </div>
     <div class="container-2">
-        <h1>Some random information.</h1>
+        <h1>Majorera Gastronomy</h1>
         <div class="gallery">
             <div>
-                <img src="img/queso_majorero.jpg" alt="Queso Majorero">
-                <p>this is some subtext under an illustration or image</p>
+                <img src="img/queso_majorero.jpg" alt="Majorero cheese">
+                <p>Majorero cheese</p>
             </div>
             <div>
-                <img src="img/gofio.jpg" alt="Gofio">
-                <p>this is some subtext under an illustration or image</p>
+                <img src="img/gofio.jpg" alt="Blanched Gofio">
+                <p>Blanched Gofio</p>
             </div>
             <div>
-                <img src="img/papas_arrugadas.jpg" alt="Papas Arrugadas">
-                <p>this is some subtext under an illustration or image</p>
+                <img src="img/papas_arrugadas.jpg" alt="Crumbled potatoes with mojo">
+                <p>Crumbled potatoes with mojo</p>
             </div>
             <div>
-                <img src="img/carne_cabra.jpg" alt="Carne de Cabra">
-                <p>this is some subtext under an illustration or image</p>
+                <img src="img/carne_cabra.jpg" alt="Goat Meat">
+                <p>Goat meat</p>
             </div>
         </div>
     </div>
