Update content on index.html and add button properties on style.css

--- a/index.html
+++ b/index.html
@@ -49,18 +49,19 @@
         </div>
     </div>
     <div class="container-3">
-        <p id="quote">This is an inspiring quote, or a testimonial from a costumer.
-            Maybe it's just filling up space, or maybe people will actually read it.
-            Who knows? All I know is that it looks nice.
+        <p id="quote">Fuerteventura is a paradise like no other. 
+            I have been living here for more than 28 years and I 
+            can say without a doubt that it is the best island in the Canary 
+            archipelago.
         </p>
-        <p id="author">-Thor, God of Thunder</p>
+        <p id="author">-Andrew, Philanthropist.</p>
     </div>
     <div class="container-4">
         <div class="action">
-            <h1>Call to action! It's time!</h1>
-            <p>Sign up for our product by clicking that button right over there!</p>
+            <h1>What are you waiting for?</h1>
+            <p>Come and discover the Majorera experience!</p>
         </div>
-        <button>Sign up</button>
+        <button>Book now</button>
     </div>
     <div class="footer">
         <p>Made with &#129505; by <strong>Andromu</strong></p>
